fix overflow issue

--- a/src/css/layout/_form.scss
+++ b/src/css/layout/_form.scss
@@ -23,5 +23,6 @@
     border-radius: 50%;
   }
   width: 400px;
+  max-width: 100vw;
   background-color: rgba($color: #fff, $alpha: 0.6);
 }
